<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/btn_home"
            android:title="Home" />
        <item
            android:id="@+id/btn_graph"
            android:title="Graph" />
    </group>



    <item android:title="@string/one_variable">
        <menu>
            <item
                android:id="@+id/btn_incrementalSearch"
                android:title="@string/incremental_search" />
            <item
                android:id="@+id/btn_bisection"
                android:title="@string/bisection" />
            <item
                android:id="@+id/btn_falsePosition"
                android:title="@string/false_position" />
            <item
                android:id="@+id/btn_fixedPoint"
                android:title="@string/fixed_point" />
            <item
                android:id="@+id/btn_newton"
                android:title="@string/newton" />
            <item
                android:id="@+id/btn_secant"
                android:title="@string/secant" />
            <item
                android:id="@+id/btn_multipleRoots"
                android:title="@string/multiple_roots" />
        </menu>
    </item>

    <item android:title="Systems of ecuations">
        <menu>
            <item
                android:id="@+id/btn_gaussSimple"
                android:title="Gauss simple" />
            <item
                android:id="@+id/btn_partialPivoting"
                android:title="Partial pivoting" />
            <item
                android:id="@+id/btn_totalPivoting"
                android:title="Total pivoting" />
            <item
                android:id="@+id/btn_crout"
                android:title="Crout" />
            <item
                android:id="@+id/btn_doolittle"
                android:title="Doolittle" />
            <item
                android:id="@+id/btn_cholesky"
                android:title="Cholesky" />
            <item
                android:id="@+id/btn_jacobi"
                android:title="Jacobi" />
            <item
                android:id="@+id/btn_jacobiRelaxation"
                android:title="Jacobi relaxation" />
            <item
                android:id="@+id/btn_gaussSeidel"
                android:title="Gauss seidel" />
            <item
                android:id="@+id/btn_gaussSeidelRelaxation"
                android:title="Gauss seidel relaxation" />
        </menu>
    </item>

</menu>
